# AgentIR

./: LICENSE  README.md  agentir.md  main.py  pyproject.toml  requirements.txt  structure.md
agentir/analyzer/: dependency.py  validator.py
agentir/docs/: ARCHITECTURE.md
agentir/examples/: benchmark.ipynb  benchmark.py  langgraph_benchmark.ipynb  multi_agent_benchmark.ipynb
agentir/examples/.ipynb_checkpoints/: benchmark-checkpoint.ipynb  langgraph_benchmark-checkpoint.ipynb  multi_agent_benchmark-checkpoint.ipynb
agentir/ir/: edge.py  graph.py  node.py
agentir/optimizer/: cache_optimizer.py  cost_estimator.py  dead_nodes.py  duplicate_tools.py  parallel_scheduler.py  token_optimizer.py
agentir/parser/: langgraph.py
agentir/runtime/: executor.py  scheduler.py
agentir/tests/: test_analyzer.py  test_ir.py  test_optimizer.py  test_parser.py  test_runtime.py  test_visualizer.py
agentir/visualizer/: graphviz.py
