[project]
name = "foss-agentir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "black>=25.1.0",
    "fastapi>=0.116.0",
    "google-generativeai>=0.8.6",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "mergedeep>=1.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mypy>=1.17.0",
    "networkx>=3.5",
    "orjson>=3.11.0",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "pygraphviz>=1.14",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "ruff>=0.12.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]
